# school-stuff

./: .gitmodules  PrintNumPattern.java  PrintPattern.java  VectorInt.java
COMP-122/armsim/: question4.s  question7.s  recursive_sum.s  test.s
COMP-182/: Vector.java
COMP-182/Array Sorting/: Sort.java  SortTest.java
COMP-182/LinkedList/: Tester.java
COMP-182/Project1-Vector/: Vector.java
COMP-182/Project2-Sorting/: HeapSort.java  Sort.java  TimeSort.java
COMP-182/Project3-Minesweeper/: Cell.java  Driver.java  MineSweeper.java  Tester.java
COMP-222/: CacheMem.cpp  CacheMem_c++11.cpp  ErrorDetectAndCorrect.cpp  InstructionParallel.cpp  Performance.cpp  Vmem.cpp  a.out
COMP-322/: DateClient.java  Driver.java  a.out  project4-1.c  project4.c  project5.c  warfield.c
COMP-333/hw1/: list.js
COMP-333/hw2/: main  main.swift
COMP-333/hw3/: main  main.swift
COMP-333/hw5/: 6_exercises.pl  8_exercises.pl  9_exercises.pl
COMP-380/ab2/: AddLayer.java  Block.java  EqLayer.java  Equation.java  Layer.java  Main.java  Term.java  Variable.java
COMP-410/: accumulators.pl  mathFunctions.pl  structures.pl  temp.m  temp.pl  test.pl
COMP-465/hw2/src/: CMakeLists.txt  main.cpp
COMP-465/hw3/src/: CMakeLists.txt  Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  main.cpp
COMP-465/project1/: CMakeLists.txt
COMP-465/project1/include/: shader.hpp
COMP-465/project1/include/glad/: glad.h
COMP-465/project1/src/: main.cpp
COMP-482/: hw1
Labs_Phys220A/: freefall.csv  freefall2.csv
Physics-220B1/: plot1.eps  plot1.ofig
Project1-Vector/: Prompt.txt  TimeVector.java
(+146 files in other folders)
